--- a/01.CSSの基本を知ろう/index.css.html
+++ b/01.CSSの基本を知ろう/index.css.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>CSSハンズオン</h1>
+  <h1>{font-color: blue;}CSSハンズオン</h1>
   <h3>Part1</h3>
   <p>ここの色を緑色にしてください。</p>
 </body>
